==> JasonYANG170/wch-dev-skill/chips/ch58x-ch59x/resources/EXAM/CH585/USB/USBHS/DEVICE/MSC_U-Disk/User/ch585_usbhs_device.c <==
#include <ch585_usbhs_device.h>
#include "SW_UDISK.h"

void USB_TestMode_Deal( void )
{
#if TEST_ENABLE==0x01
    /* start test */
    USBHS_Test_Flag &= ~0x80;

    if( USBHS_SetupReqIndex == 0x0100 )
    {
        /* Test_J */
        R8_USB2_TEST_MODE &= ~TEST_MASK;
        R8_USB2_TEST_MODE |= USBHS_UD_TEST_J;
    }
    else if( USBHS_SetupReqIndex == 0x0200 )
    {
        /* Test_K */
        R8_USB2_TEST_MODE &= ~TEST_MASK;
        R8_USB2_TEST_MODE |= USBHS_UD_TEST_K;
    }
    else if( USBHS_SetupReqIndex == 0x0300 )
    {
        /* Test_SE0_NAK */
        R8_USB2_TEST_MODE &= ~TEST_MASK;
        R8_USB2_TEST_MODE |= USBHS_UD_TEST_SE0NAK;
    }
    else if( USBHS_SetupReqIndex == 0x0400 )
    {
        /* Test_Packet */
        R8_USB2_TEST_MODE &= ~TEST_MASK;

        R32_U2EP4_TX_DMA = (uint32_t)(&IFTest_Buf[ 0 ]);
        R16_U2EP4_T_LEN = 53;
        R8_U2EP4_TX_CTRL = USBHS_UEP_T_RES_ACK;
        R8_USB2_TEST_MODE |= USBHS_UD_TEST_PKT;
    }
    R8_USB2_TEST_MODE |= USBHS_UD_TEST_EN;
#endif
}

void USBHS_Device_Endp_Init ( void )
{
    uint8_t i = 0;

    R16_U2EP_TX_EN = RB_EP0_EN | RB_EP2_EN;
    R16_U2EP_RX_EN = RB_EP0_EN | RB_EP3_EN;

    R32_U2EP0_MAX_LEN  = DEF_USBD_UEP0_SIZE;
    R32_U2EP2_MAX_LEN  = DEF_USB_EP2_HS_SIZE;
    R32_U2EP3_MAX_LEN  = DEF_USB_EP3_HS_SIZE;

    R32_U2EP0_DMA    = (uint32_t)(uint8_t *)USBHS_EP0_Buf;
    R32_U2EP2_TX_DMA = (uint32_t)(uint8_t *)UDisk_In_Buf;
    R32_U2EP3_RX_DMA = (uint32_t)(uint8_t *)UDisk_Out_Buf;

    R16_U2EP0_T_LEN  = 0;
    R8_U2EP0_TX_CTRL = USBHS_UEP_T_RES_NAK;
    R8_U2EP0_RX_CTRL = USBHS_UEP_R_RES_ACK;

    R16_U2EP2_T_LEN  = 0;
    R8_U2EP2_TX_CTRL = USBHS_UEP_T_RES_NAK;

    R8_U2EP3_RX_CTRL = USBHS_UEP_R_RES_ACK;

    /* Clear End-points Busy Status */
    for( i = 0; i < DEF_UEP_NUM; i++ )
    {
        USBHS_Endp_Busy[ i ] = 0;
    }
}

void USBHS_Device_Init ( FunctionalState sta )
{
    if( sta )
    {
        R8_USBHS_PLL_CTRL = USBHS_PLL_EN;
        R16_PIN_CONFIG |= RB_PIN_USB2_EN;

        R8_USB2_CTRL = USBHS_UD_RST_LINK | USBHS_UD_PHY_SUSPENDM;            
        R8_USB2_INT_EN = USBHS_UDIE_BUS_RST | USBHS_UDIE_SUSPEND | USBHS_UDIE_BUS_SLEEP | USBHS_UDIE_LPM_ACT | USBHS_UDIE_TRANSFER | USBHS_UDIE_LINK_RDY;      
        USBHS_Device_Endp_Init();
        R8_USB2_BASE_MODE = USBHS_UD_SPEED_HIGH;
        R8_USB2_CTRL = USBHS_UD_DEV_EN | USBHS_UD_DMA_EN | USBHS_UD_LPM_EN | USBHS_UD_PHY_SUSPENDM;
        PFIC_EnableIRQ( USB2_DEVICE_IRQn );
    }
    else
    {
        R8_USBHS_PLL_CTRL &= ~USBHS_PLL_EN;
        R32_PIN_CONFIG &= ~RB_PIN_USB2_EN;

        R8_USB2_CTRL |= USBHS_UD_RST_SIE;
        R8_USB2_CTRL &= ~USBHS_UD_RST_SIE;
        PFIC_DisableIRQ( USB2_DEVICE_IRQn );
    }
}
